--- a/investorRelations/pageEnhance.css
+++ b/investorRelations/pageEnhance.css
@@ -1,24 +1,48 @@
+a {
+    text-decoration: none;
+    color: #0091ae;
+}
+a:hover{
+    text-decoration: underline;
+    color: rgb(0, 122, 140);
+}
+#orangeButton {
+    background-color: #ff7a59; 
+    border : 0; 
+    color :white; 
+    height : 50px; 
+    width : 150px;
+}
+#orangeButton:hover {
+    opacity: 0.6;
+    cursor: pointer;
+}
 body {
     width: 100vw;
     height: 100vh;
     margin: 0;
     font-family: 'Roboto';
+    padding: 0;
+    color: #33475b;
 }
 #navbar {
     height: 15%;
-    width: 100%;
+    width: 99%;
     border: 1px solid black;
 }
 #titleDisplay {
-    width: 100%;
+    width: 99%;
     height: 50%;
     background-image: url('../imgs/investorRelBgnd.png');
+    color: white;
+    margin: auto;
+    padding-top: 5%;
 }
 #minorNavBar {
     width: 100%;
     height: 10%;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    background-color: white;
+    background-color: rgb(245, 248, 250);
     overflow: hidden;
 }
 .sticky {
@@ -42,4 +66,9 @@ body {
 }
 #minorNavBar > div {
     margin-left: 8%;
+}
+#stockUpdatesDiv {
+    width: 100%;
+    background-color: rgb(245, 248, 250);
+    height: 30%;
 }
