--- a/homepage_and_nav/style.css
+++ b/homepage_and_nav/style.css
@@ -7,7 +7,7 @@ body {
     color: rgb(51, 51, 51);
     background-color: rgba(232, 255, 253, 0.685);
     margin: 0%;
-    padding-top: 85px; 
+    padding-top: 80px; 
     
   }
 
@@ -32,6 +32,7 @@ body {
     width: 100%;
     position: fixed;
     top: 0;
+    
   }
   #top-navigation-bar a{
     font-size: 12px;
@@ -41,6 +42,12 @@ body {
     padding-left: 110px;
     margin: 0px;
     height: 10%;
+  }
+  #top-navigation-bar>ul a:hover{
+    color: #007188;
+    font-weight: 500;
+    border-bottom: 1px solid #007188;
+    
   }
   #top-navigation-bar li{
     list-style: none;
@@ -75,6 +82,35 @@ body {
   padding: 2px 8px;
 }
 
+
+/* //// */
+
+.lang-nav{
+  width: 8%;
+  height: 200px; 
+  margin-right: auto;
+  margin-left: 9%;
+  margin-top: 30px;
+  /* display: none; */
+  text-align: left;
+  padding: 5px;
+  background-color: white;
+  box-shadow: 2px 2px 14px 6px rgba(216, 216, 216, 0.438);
+  border-radius: 3px;
+
+}
+.lang-nav div>div>a>span{
+  color: rgb(51, 51, 51);
+  font-size: 13px;
+}
+.lang-nav div>div>a>span:hover{
+  color: #007188;
+  font-weight: 500;
+}
+.lang-nav div{
+  padding: 5px 8px;
+}
+
 /* ////////////////////////////// */
 
 
@@ -83,14 +119,14 @@ body {
   }
   nav {
     background-color: white;
-    height: 100px;
+    height: 80px;
     vertical-align: middle;
     width: 100%;
     position: fixed;
     top: 0;
     
     box-shadow: 2px 2px 4px 2px rgba(184, 183, 183, 0.562);
-
+    margin-top: 20px;
     
   }
   ul {
