--- a/investorRelations/pageEnhance.css
+++ b/investorRelations/pageEnhance.css
@@ -112,4 +112,50 @@ body {
     transform: rotate(45deg);
     -webkit-transform: rotate(45deg);
   }
+  .container {
+    position: relative;
+    width: 20%;
+    float : left;
+    margin: 1%;
+  }
+  
+  .image {
+    display: block;
+    width: 130px;
+    height: 140px;
+    border-radius: 5px;
+  }
+  
+  .overlay {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    width: 96%;
+    opacity: 0;
+    transition: .5s ease;
+    background-color: black;
+    border-radius: 5px;
+  }
+  
+  .container:hover .overlay {
+    opacity: 0.6;
+  }
+  
+  .text {
+    color: white;
+    font-size: 20px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    text-align: center;
+  }
+  .cursorShift:hover{
+      cursor: pointer;
+  }
   
