--- a/contact_sales/meeting_style.css
+++ b/contact_sales/meeting_style.css
@@ -71,12 +71,52 @@ margin-bottom: 40px;
     
     outline: none;
     font-weight: 700;
+    margin-right: 10px;
 }
 #meeting-button-1:hover{
     background-color: #82a8c5;
 }
 
 #meeting-info>div{
-    width: 30%;
+    width: 35%;
     margin: auto;
+}
+
+#call-us-directly{
+    width: 100%;
+    height: 35vh;
+    /* border: 1px solid red; */
+    padding-top: 40px;
+    background-color: rgba(236, 236, 236, 0.466);
+    margin-bottom: 50px;
+}
+#call-us-directly>div{
+    width: 80%;
+    height: 80%;
+    /* border: 1px solid green; */
+    border-radius: 4px;
+    margin: auto;
+    display: flex;
+    
+}
+#call-us-directly>div>div{
+    width: 40%;
+    /* border: 1px solid black; */
+    height: 100%;
+    
+}
+#call-us-directly>div>.call-us-directly-orange{
+    background: linear-gradient(45deg, #ff7a59, #ff8f59);
+    width: 60%;
+    border-radius: 4px;
+}
+.call-us-option>p{
+    font-size: 20px;
+    font-weight: 500;
+    padding-top: 45px;
+    text-align: center;
+}
+.call-us-option{
+    background-color: white;
+    border-radius: 4px;
 }
