--- a/contact_sales/contact_sales_style.css
+++ b/contact_sales/contact_sales_style.css
@@ -252,3 +252,27 @@ margin-bottom: 0;
 }
 
 
+
+
+#meeting-footer{
+    width: 100%;
+    height: 30vh;
+    background-color: #385470;
+    color: white;
+    text-align: center;
+    padding-top: 50px;
+}
+#meeting-footer>div{
+    padding-top: 18px;
+    
+}
+#meeting-footer>div a{
+    color: rgba(255, 255, 255, 0.664);
+    text-decoration: none;
+    font-weight: 700;
+    margin: 10px;
+}
+#meeting-footer>div a:hover{
+    color: rgba(131, 192, 241, 0.726);
+}
+
