--- a/managementTeam/pageStyle.css
+++ b/managementTeam/pageStyle.css
@@ -109,7 +109,7 @@ a:hover{
 }
 .container {
     position: relative;
-    width: 20%;
+    width: 99%;
     float : left;
     margin: 1%;
   }
@@ -123,16 +123,15 @@ a:hover{
   
   .overlay {
     position: absolute;
-    top: 0;
+    top: 1.65%;
     bottom: 0;
-    left: 0;
+    left: 0.6%;
     right: 0;
-    height: 100%;
-    width: 96%;
+    height: 96%;
+    width: 97%;
     opacity: 0;
     transition: .5s ease;
     background-color: black;
-    border-radius: 5px;
   }
   
   .container:hover .overlay {
@@ -149,4 +148,15 @@ a:hover{
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
     text-align: center;
+  }
+  .material-icons.md-48 { font-size: 100px; }
+  .aboutLink {
+      font-size: 25px;
+      color : white;
+  }
+  .aboutLink:hover {
+      opacity: 1;
+      cursor: pointer;
+      font-weight: bold;
+      text-decoration: none;
   }
