Added a header dummy

--- a/investorRelations/pageEnhance.css
+++ b/investorRelations/pageEnhance.css
@@ -28,7 +28,8 @@ body {
 #navbar {
     height: 15%;
     width: 100%;
-    border: 1px solid black;
+    background-image: url('./../imgs/navbar.png');
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 #titleDisplay {
     width: 100%;
